--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.google.android.material:material:1.0.0'
+    //add dependcy new
+    implementation 'com.google.android.material:material:1.0.0'
 }
